WE-20: added get for vehicles
